src/styles/style.css
/* ... */
.rotate-x-180 {
  transform: rotateX(180deg) !important;
  -webkit-transform: rotateX(180deg) !important;
}

.rotate-90 {
  transform: rotate(90deg) scale(0.8);
  -webkit-transform: rotate(90deg) scale(0.8);
}

.rotate-180 {
  transform: rotate(180deg);
  -webkit-transform: rotate(180deg);
}

.view-close-btn {
  top: -6rem;
  right: 2rem;
}

.action-btn {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  width: clamp(5.2rem, calc(10vw + 5px), 6rem);
  height: clamp(5.2rem, calc(10vw + 5px), 6rem);
  fill: var(--clr-light);
  top: min(calc(clamp(35rem, calc(80vw + 10px), 55rem) * 1.45), 80rem);
  left: 0;
  right: 0;
  margin: auto;
  background-color: rgba(0, 0, 0, 0);
  border-radius: 50%;
  z-index: 2000;
  transform: rotateY(180deg);
  -webkit-transform: rotateY(180deg);
  border: 3px solid var(--clr-light-grey);
  transition: all 0.3s;
  -webkit-transition: all 0.3s;
}


.action-btn svg {
  width: clamp(3rem, calc(7vw + 1px), 4rem) !important;
  height: clamp(3rem, calc(7vw + 1px), 4rem) !important;
}

.action-btn svg path { 
  fill: var(--clr-light);
}

.action-btn svg path:nth-of-type(2) {
  fill: rgba(255, 255, 255, 0.5) !important;
}

.card-action-btn {
  position: absolute;
  width: 4.2rem;
  height: 4.2rem;
  padding: 0.5rem;
  bottom: 5%;
  right: 7%;
  background: rgba(255, 255, 255, 0.6);
  border-radius: 50%;
  z-index: 2000;
  transform: rotateY(-180deg);
  -webkit-transform: rotateY(-180deg);
  border: 2px solid rgb(0, 0, 0, 0.8);
  transition: all 0.3s;
  -webkit-transition: all 0.3s;
}

.card-action-btn:hover {
  background: rgba(255, 255, 255);
}


.card-action-btn svg path:nth-of-type(1) {
  fill: rgba(0, 0, 0, 0.8);
}

.card-action-btn svg path:nth-of-type(2) {
  fill: rgba(0, 0, 0, 0.8);
}

.catalog-slide-container {
  min-height: inherit;
}

.double-faced-card {
  width: 100%;
  height: 100%;
  position: relative;
  transform-style: preserve-3d;
  /* z-index: 5; */
}

.double-faced-card,
.single-faced-card {
  transition: transform 300ms, -webkit-transform 300ms, -o-transition 300ms;
}

.double-faced-recto, 
.double-faced-verso {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}

.double-faced-verso {
  transform: rotateY(180deg);
  -webkit-transform: rotateY(180deg);
}

/* ////////////////// */
/* /// Slide Show /// */
/* ////////////////// */

.slide-show {
  position: relative;  
  height: 100%;
  min-width: 37rem;
  /* background: rgba(0, 0, 0, 0.7); */
}

.slide-track {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: 100%;
  transition: left 0.4s ease;
}

.slide-frame {
  position: absolute;
  top: clamp(4rem, calc(7vh + 15px), 12rem);
  left: 0;
  right: 0;
  margin: 0 auto;
  width: clamp(31rem, calc(80vw + 10px), 55rem);
  min-height: calc(clamp(31rem, calc(80vw + 10px), 55rem) * 1.392);
}

.modal-padding-top {
  padding-block-start: clamp(4rem, calc(7vh + 15px), 12rem);
}

.slide {
  width: 100%;
  height: 100%;
  perspective: 150rem;
}

.slide-btn {
  top: calc((calc(clamp(31rem, calc(80vw + 10px), 55rem) * 1.3) - 7rem) / 2) ;
}

.slide-left-btn {
  left: -5rem;
}
.slide-right-btn {
  right: -5rem;
}

.slide-close-btn {
  top: -6rem;
  right: -2rem;
}

.card-btn {
  height: 7rem;
  width: 7rem;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgba(0, 0, 0, 0);
  border-radius: 50px;
  z-index: 3000;
}

.card-btn > svg {
  width: 50%;
  height: 50%;
}

.card-btn svg,
.indicator svg {
  color: var(--clr-light) !important;
}

.card-btn * {
  pointer-events: none;
}
 
.card-btn:hover { 
  cursor: pointer;
}

.indicators {
  position: absolute;
  left: 0;
  right: 0;
  top: min(calc(clamp(31rem, calc(80vw + 10px), 55rem) * 1.7), 81rem);
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;
  min-height: 3rem;
  z-index: 6001;
}

.indicator svg {
  width: clamp(1.4rem, calc(3vw + 3px), 2rem) !important;
  height: clamp(1.4rem, calc(3vw + 3px), 2rem) !important;
  stroke-width: 0.8;
  vertical-align: middle;
}

.current-indicator svg {
  display: block;
  height: 2rem;
  width: 2rem;
}

/* ////////////////////////// */
/* /// Search Result View /// */
/* ////////////////////////// */
.breadcrumbs {
  display: flex;
  align-items: center;
  max-width: 135rem;
  margin: auto;
  padding-inline: 1rem;
  min-height: 3rem;
}

.breadcrumbs .crumb {
  display: inline-block;
  align-self: center;
  margin-inline-end: 0.3rem;
  /* line-height: 1; */
  font-size: clamp(11.5px, calc(0.5vw + 5px), var(--fs-150));
}

.breadcrumbs .crumb::after {
  content: '>';
  margin-inline-start: 0.3rem;
  vertical-align: middle;
  font-size: clamp(var(--fs-100), calc(0.5vw + 5px), var(--fs-150));

}

.breadcrumbs .crumb:last-child::after {
  display: none;
}

.dashboard-nav {
width: 100%;
min-width: 37rem;
/* z-index: 1000; */
}

.contextual-links {
  display: flex;
  min-height: 4rem;
}

.contextual-links > a {
display: flex;
width: 100%;
align-items: center;
justify-content: center;
border-top: 1px solid var(--clr-light-border);
border-right: 1px solid var(--clr-light-border);
}

.contextual-links > a:last-of-type {
  border-right: none;
}

.dashboard-nav a span {
pointer-events: none;
font-size: var(--fs-125);
font-weight: 500;
margin: auto;
}

.active {
color: var(--clr-primary);
background-color: var(--clr-light);
}

.inactive {
color: var(--clr-grey);
background-color: var(--clr-primary);
}


.search-count {
  position: fixed;
  display: flex;
  top: 5rem;
  left: 0;
  width: 100vw;
  min-width: 37rem;
  min-height: 4rem;
  margin: auto;
  padding-inline: 1rem;
  background-color: var(--clr-primary);
  transition: top 0.2s ease-in;
  border-top: 1px solid rgba(255, 255, 255, 0.3);
  z-index: 1000;
}
/* ... */

